--- a/index.html
+++ b/index.html
@@ -867,7 +867,7 @@
             <div class="card mb-4 border-0 rounded-3 position-relative">
               <a href="index.html">
                 <img src="images/category1.jpg" class="img-fluid rounded-3" alt="cart item">
-                <h6 class=" position-absolute bottom-0 bg-primary m-4 py-2 px-3 rounded-3"><a href="index.html"
+                <h6 class=" position-absolute bottom-0 bg-primary m-4 py-2 px-3 rounded-3"><a href="romance.html"
                     class="text-white">Romance</a></h6>
               </a>
             </div>
@@ -876,7 +876,7 @@
             <div class="card text-center mb-4 border-0 rounded-3">
               <a href="index.html">
                 <img src="images/category2.jpg" class="img-fluid rounded-3" alt="cart item">
-                <h6 class=" position-absolute bottom-0 bg-primary m-4 py-2 px-3 rounded-3"><a href="index.html"
+                <h6 class=" position-absolute bottom-0 bg-primary m-4 py-2 px-3 rounded-3"><a href="lifestyle.html"
                     class="text-white">Lifestyle</a></h6>
               </a>
             </div>
@@ -885,7 +885,7 @@
             <div class="card text-center mb-4 border-0 rounded-3">
               <a href="index.html">
                 <img src="images/category3.jpg" class="img-fluid rounded-3" alt="cart item">
-                <h6 class=" position-absolute bottom-0 bg-primary m-4 py-2 px-3 rounded-3"><a href="index.html"
+                <h6 class=" position-absolute bottom-0 bg-primary m-4 py-2 px-3 rounded-3"><a href="recipe.html"
                     class="text-white">Recipe</a></h6>
               </a>
             </div>
