--- a/login.html
+++ b/login.html
@@ -23,45 +23,33 @@
           </ul>
         </div>
         <div class="card-body">
-          <div class="tab-content" id="authTabContent">
+          <div class="tab-content" id="nav-tabContent">
 
             <!-- Login Tab -->
-            <div class="tab-pane fade show active" id="login" role="tabpanel" aria-labelledby="login-tab">
-              <form id="loginForm">
-                <div class="mb-3">
-                  <label for="loginEmail" class="form-label">Email</label>
-                  <input type="email" id="loginEmail" class="form-control" required />
+            <div class="tab-pane fade active show" id="login" role="tabpanel" aria-labelledby="login-tab">
+                <div class="form-group py-3">
+                    <label class="mb-2" for="loginUsername">Username or email address *</label>
+                    <input type="text" id="loginUsername" name="loginUsername" class="form-control w-100 rounded-3 p-3" placeholder="Your Username" required>
                 </div>
-                <div class="mb-3">
-                  <label for="loginPassword" class="form-label">Password</label>
-                  <input type="password" id="loginPassword" class="form-control" required />
+                <div class="form-group pb-3">
+                    <label class="mb-2" for="loginPassword">Password *</label>
+                    <input type="password" id="loginPassword" name="loginPassword" class="form-control w-100 rounded-3 p-3" placeholder="Your Password" required>
                 </div>
-                <div id="loginError" class="text-danger mb-3" style="display:none;"></div>
-                <button type="submit" class="btn btn-primary w-100">Login</button>
-              </form>
+                <input type="button" onclick="login()" class="btn btn-dark w-100 my-3" value="login">
             </div>
 
             <!-- Register Tab -->
             <div class="tab-pane fade" id="register" role="tabpanel" aria-labelledby="register-tab">
-              <form id="registerForm">
-                <div class="mb-3">
-                  <label for="registerEmail" class="form-label">Email</label>
-                  <input type="email" id="registerEmail" class="form-control" required />
+                <div class="form-group py-3">
+                  <label class="mb-2" for="registerUsername">Your email address *</label>
+                  <input type="text" id="registerUsername" name="registerUsername" class="form-control w-100 rounded-3 p-3" placeholder="Your Email Address" required>
                 </div>
-                <div class="mb-3">
-                  <label for="registerPassword" class="form-label">Password</label>
-                  <input type="password" id="registerPassword" class="form-control" minlength="6" required />
+                <div class="form-group pb-3">
+                    <label class="mb-2" for="registerPassword">Password *</label>
+                    <input type="password" id="registerPassword" name="registerPassword" class="form-control w-100 rounded-3 p-3" placeholder="Your Password"  required>
                 </div>
-                <div class="mb-3">
-                  <label for="registerConfirmPassword" class="form-label">Confirm Password</label>
-                  <input type="password" id="registerConfirmPassword" class="form-control" minlength="6" required />
-                </div>
-                <div id="registerError" class="text-danger mb-3" style="display:none;"></div>
-                <div id="registerSuccess" class="text-success mb-3" style="display:none;"></div>
-                <button type="submit" class="btn btn-success w-100">Register</button>
-              </form>
+                <input type="button" onclick="register()" class="btn btn-dark w-100 my-3" value="register">
             </div>
-
           </div>
         </div>
       </div>
@@ -70,83 +58,68 @@
 </div>
 
 <script>
-  // ฟังก์ชันตรวจสอบอีเมลง่ายๆ
-  function validateEmail(email) {
-    return /\S+@\S+\.\S+/.test(email);
+async function register(){
+    let data = {
+                registerUsername : document.getElementById('registerUsername').value.trim(),
+                registerPassword : document.getElementById('registerPassword').value.trim()
+                };
+    console.log(data);
+
+    if (!data.registerUsername || !data.registerPassword) {
+    alert("Please fill in all fields.");
+    return;
+    } else {
+    fetch('http://localhost:3000/api/register', {
+    method: 'POST',
+    headers: {
+    'Content-Type': 'application/json'
+    },
+    body: JSON.stringify(data)
+})
+    .then(response => response.json())
+    .then(result => {
+      alert(result.message || 'Register successfully');
+    })
+    }  
+}
+async function login() {
+  const data = {
+    loginUsername: document.getElementById('loginUsername').value.trim(),
+    loginPassword: document.getElementById('loginPassword').value.trim() 
+  };
+
+  if (!data.loginUsername || !data.loginPassword) {
+    alert("Please enter both username and password.");
+    return;
   }
 
-  // Login form
-  document.getElementById('loginForm').addEventListener('submit', function(e) {
-    e.preventDefault();
-    const email = document.getElementById('loginEmail').value.trim();
-    const password = document.getElementById('loginPassword').value;
-    const loginError = document.getElementById('loginError');
-    loginError.style.display = 'none';
-    loginError.textContent = '';
-
-    if (!email || !password) {
-      loginError.textContent = 'กรุณากรอกข้อมูลให้ครบ';
-      loginError.style.display = 'block';
-      return;
-    }
-
-    const users = JSON.parse(localStorage.getItem('users')) || [];
-    const user = users.find(u => u.email.toLowerCase() === email.toLowerCase() && u.password === password);
-
-    if (user) {
+   fetch('http://localhost:3000/api/login', {
+    method: 'POST',
+    headers: { 'Content-Type': 'application/json' },
+    credentials: 'include', // ส่ง cookie session ไปด้วย
+    body: JSON.stringify(data)
+  })
+  .then(response => response.json())
+  .then(result => {
+    if (result.success) {
+      // ✅ ตั้งค่า login ให้ localStorage
       localStorage.setItem('login', 'true');
-      localStorage.setItem('email', user.email);
-      alert('Login สำเร็จ');
-      window.location.href = 'index.html'; // เปลี่ยนเป็นหน้าหลักของคุณ
+      localStorage.setItem('user', JSON.stringify(result.user || {}));
+      
+      alert(result.message || 'Login successful');
+      window.location.href = 'index.html'; // ✅ เปลี่ยนหน้าเมื่อ login แล้ว
+
     } else {
-      loginError.textContent = 'อีเมลหรือรหัสผ่านไม่ถูกต้อง';
-      loginError.style.display = 'block';
+      alert(result.message || 'Login failed');
     }
+})
+  .catch(err => {
+    console.error('Login error:', err);
+    alert('Error logging in');
   });
-
-  // Register form
-  document.getElementById('registerForm').addEventListener('submit', function(e) {
-    e.preventDefault();
-    const email = document.getElementById('registerEmail').value.trim();
-    const password = document.getElementById('registerPassword').value;
-    const confirmPassword = document.getElementById('registerConfirmPassword').value;
-    const registerError = document.getElementById('registerError');
-    const registerSuccess = document.getElementById('registerSuccess');
-    registerError.style.display = 'none';
-    registerSuccess.style.display = 'none';
-    registerError.textContent = '';
-    registerSuccess.textContent = '';
-
-    if (!validateEmail(email)) {
-      registerError.textContent = 'กรุณากรอกอีเมลให้ถูกต้อง';
-      registerError.style.display = 'block';
-      return;
-    }
-
-    if (password !== confirmPassword) {
-      registerError.textContent = 'รหัสผ่านและยืนยันรหัสผ่านไม่ตรงกัน';
-      registerError.style.display = 'block';
-      return;
-    }
-
-    let users = JSON.parse(localStorage.getItem('users')) || [];
-    if (users.find(u => u.email.toLowerCase() === email.toLowerCase())) {
-      registerError.textContent = 'อีเมลนี้ถูกใช้ไปแล้ว';
-      registerError.style.display = 'block';
-      return;
-    }
-
-    users.push({ email, password }); // **ระบบจริงควรเข้ารหัสรหัสผ่าน**
-    localStorage.setItem('users', JSON.stringify(users));
-
-    registerSuccess.textContent = 'สมัครสมาชิกสำเร็จ! คุณสามารถล็อกอินได้เลย';
-    registerSuccess.style.display = 'block';
-
-    // เคลียร์ฟอร์ม
-    document.getElementById('registerForm').reset();
-  });
+}
 </script>
-
+<script src="login.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
