--- a/romance.html
+++ b/romance.html
@@ -47,27 +47,45 @@
       });
     });
 
+
     function addToCart(bookId, name, price) {
-      fetch('http://localhost:5000/api/cart/add', {
-        method: 'POST',
-        headers: { 'Content-Type': 'application/json' },
-        credentials: 'include', // ✅ ส่ง cookie session ไปด้วย
-        body: JSON.stringify({ productId: bookId, name, price })
-      })
-      .then(res => res.json())
-      .then(result => {
-        if (result.error) {
-          alert(result.error);
-          window.location.href = 'login.html'; // ❗ไปล็อกอินถ้าไม่ได้ login
-        } else {
-          alert(result.message || "Added to cart!");
-        }
-      })
-      .catch(err => {
-        console.error("Add to cart error:", err);
-        alert("Please login before adding to cart.");
-      });
+
+    const user = JSON.parse(localStorage.getItem('user'));
+    const userId = user?.id;
+
+    if (!userId) {
+      alert("Please login before adding to cart.");
+      window.location.href = 'login.html';
+      return;
     }
+     const quantity = 10;
+
+    fetch('http://localhost:3000/api/cart', {
+    method: 'POST',
+    headers: {
+      'Content-Type': 'application/json'
+    },
+    body: JSON.stringify({
+      user_id: userId,
+      book_id: bookId,
+      quantity: quantity
+    })
+  })
+
+  .then(res => res.json())
+  .then(result => {
+    if (result.error) {
+      alert("error " + result.error);
+    } else {
+      alert(`"${name}" added to cart.`);
+    }
+  })
+  .catch(err => {
+    console.error("Add to cart error:", err);
+    alert("Could not add to cart");
+  });
+}
+    
   </script>
 </body>
 </html>
