--- a/login.html
+++ b/login.html
@@ -48,6 +48,10 @@
                     <label class="mb-2" for="registerPassword">Password *</label>
                     <input type="password" id="registerPassword" name="registerPassword" class="form-control w-100 rounded-3 p-3" placeholder="Your Password"  required>
                 </div>
+                <select id="registerRole" class="form-control mb-3">
+                  <option value="user" >User</option>
+                  <option value="admin">Admin</option>
+                </select>
                 <input type="button" onclick="register()" class="btn btn-dark w-100 my-3" value="register">
             </div>
           </div>
@@ -58,10 +62,11 @@
 </div>
 
 <script>
-async function register(){
+function register(){
     let data = {
                 registerUsername : document.getElementById('registerUsername').value.trim(),
-                registerPassword : document.getElementById('registerPassword').value.trim()
+                registerPassword : document.getElementById('registerPassword').value.trim(),
+                registerRole : document.getElementById('registerRole').value.trim()
                 };
     console.log(data);
 
@@ -84,11 +89,11 @@ async function register(){
 }
 async function login() {
   const data = {
-    loginUsername: document.getElementById('loginUsername').value.trim(),
-    loginPassword: document.getElementById('loginPassword').value.trim() 
+    email: document.getElementById('loginUsername').value.trim(),
+    password: document.getElementById('loginPassword').value.trim()
   };
 
-  if (!data.loginUsername || !data.loginPassword) {
+  if (!data.email || !data.password) {
     alert("Please enter both username and password.");
     return;
   }
@@ -102,12 +107,12 @@ async function login() {
   .then(response => response.json())
   .then(result => {
     if (result.success) {
-      // ✅ ตั้งค่า login ให้ localStorage
-      localStorage.setItem('login', 'true');
-      localStorage.setItem('user', JSON.stringify(result.user));
-      
       alert('Login successful');
-      window.location.href = 'index.html'; // ✅ เปลี่ยนหน้าเมื่อ login แล้ว
+      if (result.user.role === 'admin') {
+      window.location.href = 'admin.html';
+    } else {
+      window.location.href = 'index.html';
+    }
 
     } else {
       alert('Login failed');
@@ -119,7 +124,6 @@ async function login() {
   });
 }
 </script>
-<script src="login.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
