--- a/romance.html
+++ b/romance.html
@@ -47,24 +47,17 @@
       });
     });
 
+    //let currentUserEmail = sessionStorage.getItem('email'); // ใช้ sessionStorage แทน
 
     function addToCart(bookId, name, price) {
-
-    const user = JSON.parse(localStorage.getItem('user'));
-    const userId = user?.id;
-
-    if (!userId) {
-      alert("Please login before adding to cart.");
-      window.location.href = 'login.html';
-      return;
-    }
-     const quantity = 10;
+      const quantity = 10;
 
     fetch('http://localhost:3000/api/cart', {
     method: 'POST',
     headers: {
       'Content-Type': 'application/json'
     },
+    credentials: 'include',  // ส่ง cookie session ไปด้วย (สำคัญมาก)
     body: JSON.stringify({
       user_id: userId,
       book_id: bookId,
@@ -72,18 +65,24 @@
     })
   })
 
-  .then(res => res.json())
-  .then(result => {
-    if (result.error) {
-      alert("error " + result.error);
-    } else {
-      alert(`"${name}" added to cart.`);
-    }
-  })
-  .catch(err => {
-    console.error("Add to cart error:", err);
-    alert("Could not add to cart");
-  });
+  .then(res => {
+      if (res.status === 401) {
+        alert("Please login before adding to cart.");
+        window.location.href = 'login.html';
+        throw new Error("Unauthorized");
+      }
+      return res.json();
+    })
+    .then(result => {
+      if (result.error) {
+        alert("Error: " + result.error);
+      } else {
+        alert(`"${name}" added to cart.`);
+      }
+    })
+    .catch(err => {
+      console.error("Add to cart error:", err);
+    });
 }
     
   </script>
