--- a/romance.html
+++ b/romance.html
@@ -59,7 +59,7 @@
     },
     credentials: 'include',  // ส่ง cookie session ไปด้วย (สำคัญมาก)
     body: JSON.stringify({
-      user_id: userId,
+      //user_id: userId,
       book_id: bookId,
       quantity: quantity
     })
