--- a/login.html
+++ b/login.html
@@ -107,6 +107,9 @@ async function login() {
   .then(response => response.json())
   .then(result => {
     if (result.success) {
+      // เก็บข้อมูล user ลง localStorage
+      localStorage.setItem('user', JSON.stringify(result.user));
+      
       alert('Login successful');
       if (result.user.role === 'admin') {
       window.location.href = 'admin.html';
