--- a/admin.html
+++ b/admin.html
@@ -20,6 +20,7 @@
       <input class="form-control mb-2" id="category" placeholder="Category">
       <input type="file" id="image" class="form-control mb-2">
       <button class="btn btn-success" onclick="saveProduct()">Save Product</button>
+      <a href="index.html" class="btn btn-secondary mt-2">Back to Home</a>
     </div>
 
     <!-- ตารางสินค้า -->
