--- a/checkout.html
+++ b/checkout.html
@@ -1,33 +1,92 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Checkout | Bookly</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!-- Bootstrap 5 CDN -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" defer></script>
-  <!-- Custom JS -->
-  <script src="checkout.js" defer></script>
+  <meta charset="UTF-8" />
+  <title>Checkout</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
 </head>
 <body class="bg-light">
 
-  <div class="container py-5">
-    <h2 class="mb-4 text-center">Checkout Page</h2>
+<div class="container py-5">
+  <h2 class="mb-4 text-center">Checkout Page</h2>
 
-    <div id="checkout-list" class="list-group mb-4">
-      <!-- Items will be dynamically inserted here -->
-    </div>
-
-    <div class="d-flex justify-content-between align-items-center mb-4">
-      <h4>Total: <span class="text-primary">$<span id="checkout-total">0</span></span></h4>
-      <button id="pay-btn" class="btn btn-success">Pay Now</button>
-    </div>
-
-    <div class="text-center">
-      <a href="index.html" class="btn btn-outline-secondary">← Back to Shop</a>
-    </div>
+  <div id="checkout-list" class="list-group mb-4">
+    <!-- รายการสินค้าจะมาแสดงที่นี่ -->
   </div>
 
+  <div class="d-flex justify-content-between align-items-center mb-4">
+    <h4>Total: $<span id="checkout-total">0.00</span></h4>
+    <button id="pay-btn" class="btn btn-success">Pay Now</button>
+  </div>
+
+  <div class="text-center">
+    <a href="index.html" class="btn btn-outline-secondary">← Back to Shop</a>
+  </div>
+</div>
+
+<script>
+  document.addEventListener('DOMContentLoaded', () => {
+    const checkoutList = document.getElementById('checkout-list');
+    const totalElement = document.getElementById('checkout-total');
+    const payBtn = document.getElementById('pay-btn');
+
+    // โหลดข้อมูลตะกร้าจาก localStorage
+    let cart = JSON.parse(localStorage.getItem('cart')) || [];
+
+    function renderCart() {
+      checkoutList.innerHTML = '';
+      let total = 0;
+
+      if (cart.length === 0) {
+        checkoutList.innerHTML = `<div class="alert alert-warning text-center">Your cart is empty.</div>`;
+        totalElement.textContent = '0.00';
+        payBtn.disabled = true;
+        return;
+      }
+
+      cart.forEach((item, index) => {
+        total += item.price;
+
+        const itemDiv = document.createElement('div');
+        itemDiv.className = 'list-group-item d-flex justify-content-between align-items-center';
+        itemDiv.innerHTML = `
+          <div>
+            <h6 class="mb-1">${item.name}</h6>
+            <small class="text-muted">$${item.price.toFixed(2)}</small>
+          </div>
+          <button class="btn btn-sm btn-outline-danger" onclick="removeItem(${index})">Remove</button>
+        `;
+        checkoutList.appendChild(itemDiv);
+      });
+
+      totalElement.textContent = total.toFixed(2);
+      payBtn.disabled = false;
+    }
+
+    window.removeItem = function(index) {
+      cart.splice(index, 1);
+      localStorage.setItem('cart', JSON.stringify(cart));
+      renderCart();
+    };
+
+    payBtn.addEventListener('click', () => {
+      if (cart.length === 0) {
+        alert('Your cart is empty.');
+        return;
+      }
+      if (confirm(`Confirm payment of $${totalElement.textContent}?`)) {
+        alert('Payment successful! Thank you.');
+        cart = [];
+        localStorage.removeItem('cart');
+        renderCart();
+      }
+    });
+
+    renderCart();
+  });
+</script>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
