--- a/lifestyle.html
+++ b/lifestyle.html
@@ -5,7 +5,6 @@
   <title>Lifestyle Books</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <script src="lifestyle.js" defer></script>
 </head>
 <body class="bg-light">
 
@@ -20,6 +19,66 @@
       <a href="index.html" class="btn btn-outline-secondary">← Back to Categories</a>
     </div>
   </div>
+<script>
+  document.addEventListener('DOMContentLoaded', () => {
+    const container = document.getElementById('lifestyle-books');
+    const user = JSON.parse(localStorage.getItem('user'));
+    if (!user || !user.email) {
+      alert("Please login first.");
+      window.location.href = "login.html";
+    }
 
+    const lifestyleBooks = [
+      { id: 201, name: "The Yoga Lifestyle", price: 250, image: "images/lifestyle1.jpg"},
+      { id: 202, name: "BUPA Guide to Healthy Living 101", price: 220, image: "images/lifestyle2.jpg"},
+      { id: 203, name: "My Life Story", price: 199, image: "images/lifestyle3.jpg"}
+    ];
+
+    lifestyleBooks.forEach(book => {
+      const col = document.createElement('div');
+      col.className = 'col';
+
+      col.innerHTML = `
+        <div class="card h-100 shadow-sm">
+          <img src="${book.image}" class="card-img-top" alt="${book.name}">
+          <div class="card-body">
+            <h5 class="card-title">${book.name}</h5>
+            <p class="card-text text-danger">$${book.price}</p>
+            <button class="btn btn-primary w-100" onclick="addToCart(${book.id}, '${book.name}', ${book.price})">Add to Cart</button>
+          </div>
+        </div>
+      `;
+       container.appendChild(col);
+    });
+  });
+
+
+
+  function addToCart(bookId, name, price) {
+  const user = JSON.parse(localStorage.getItem('user'));
+
+  if (!user) {
+    alert("Please login before adding to cart.");
+    window.location.href = 'login.html';
+    return;
+  }
+
+  const quantity = 1;
+  const cart = JSON.parse(localStorage.getItem('cart')) || [];
+
+  const existingItem = cart.find(item => item.bookId === bookId);
+
+  if (existingItem) {
+    existingItem.quantity += quantity;
+  } else {
+    cart.push({ bookId, name, price, quantity });
+  }
+
+  localStorage.setItem('cart', JSON.stringify(cart));
+  alert(`"${name}" added to cart.`);
+}
+
+
+  </script>
 </body>
 </html>
