--- a/recipe.html
+++ b/recipe.html
@@ -2,17 +2,16 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Recipe Books</title>
+  <title>Romance Books</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <script src="recipe.js" defer></script>
 </head>
 <body class="bg-light">
 
   <div class="container py-5">
-    <h2 class="mb-4 text-center text-danger">Recipe Books</h2>
+    <h2 class="mb-4 text-center text-danger">Romance Books</h2>
 
-    <div id="recipe-books" class="row row-cols-1 row-cols-md-3 g-4">
+    <div id="romance-books" class="row row-cols-1 row-cols-md-3 g-4">
       <!-- Books will be inserted here -->
     </div>
 
@@ -20,6 +19,61 @@
       <a href="index.html" class="btn btn-outline-secondary">← Back to Categories</a>
     </div>
   </div>
+<script>
+  document.addEventListener('DOMContentLoaded', () => {
+      const container = document.getElementById('romance-books');
 
+      const romanceBooks = [
+        { id: 301, name: "children's Cookbook", price: 220, image: "images/recipe1.jpg" },
+        { id: 302, name: "The Ultimate fast 800 Recipe Book", price: 259, image: "images/recipe2.jpg" },
+        { id: 303, name: "Home Made Dog Cookbook", price: 229, image: "images/recipe3.jpg" }
+      ];
+
+      romanceBooks.forEach(book => {
+        const col = document.createElement('div');
+        col.className = 'col';
+
+        col.innerHTML = `
+          <div class="card h-100 shadow-sm">
+            <img src="${book.image}" class="card-img-top" alt="${book.name}">
+            <div class="card-body">
+              <h5 class="card-title">${book.name}</h5>
+              <p class="card-text text-danger">$${book.price}</p>
+              <button class="btn btn-primary w-100" onclick="addToCart(${book.id}, '${book.name}', ${book.price})">Add to Cart</button>
+            </div>
+          </div>
+        `;
+        container.appendChild(col);
+      });
+    });
+
+    //let currentUserEmail = sessionStorage.getItem('email'); // ใช้ sessionStorage แทน
+
+    function addToCart(bookId, name, price) {
+  const user = JSON.parse(localStorage.getItem('user'));
+
+  if (!user) {
+    alert("Please login before adding to cart.");
+    window.location.href = 'login.html';
+    return;
+  }
+
+  const quantity = 1;
+  const cart = JSON.parse(localStorage.getItem('cart')) || [];
+
+  const existingItem = cart.find(item => item.bookId === bookId);
+
+  if (existingItem) {
+    existingItem.quantity += quantity;
+  } else {
+    cart.push({ bookId, name, price, quantity });
+  }
+
+  localStorage.setItem('cart', JSON.stringify(cart));
+  alert(`"${name}" added to cart.`);
+}
+
+    
+  </script>
 </body>
 </html>
