--- a/recipe.html
+++ b/recipe.html
@@ -2,16 +2,16 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Romance Books</title>
+  <title>Recipe Books</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body class="bg-light">
 
   <div class="container py-5">
-    <h2 class="mb-4 text-center text-danger">Romance Books</h2>
+    <h2 class="mb-4 text-center text-danger">Recipe Books</h2>
 
-    <div id="romance-books" class="row row-cols-1 row-cols-md-3 g-4">
+    <div id="recipe-books" class="row row-cols-1 row-cols-md-3 g-4">
       <!-- Books will be inserted here -->
     </div>
 
@@ -21,15 +21,15 @@
   </div>
 <script>
   document.addEventListener('DOMContentLoaded', () => {
-      const container = document.getElementById('romance-books');
+      const container = document.getElementById('recipe-books');
 
-      const romanceBooks = [
+      const recipeBooks = [
         { id: 301, name: "children's Cookbook", price: 220, image: "images/recipe1.jpg" },
         { id: 302, name: "The Ultimate fast 800 Recipe Book", price: 259, image: "images/recipe2.jpg" },
         { id: 303, name: "Home Made Dog Cookbook", price: 229, image: "images/recipe3.jpg" }
       ];
 
-      romanceBooks.forEach(book => {
+      recipeBooks.forEach(book => {
         const col = document.createElement('div');
         col.className = 'col';
 
